# opengl-startup-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Far-Annoyed/: CMakeLists.txt
Far-Annoyed/include/glad/: glad.h
Far-Annoyed/src/: Application.cpp  Application.h  CMakeLists.txt  glad.c  main.cpp
Far-Annoyed/src/Game/: CMakeLists.txt  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h
Far-Annoyed/src/Game/Utility/: EBO.cpp  EBO.h  SHADER.cpp  SHADER.h  TEXTURE.cpp  TEXTURE.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Far-Annoyed/src/Game/assets/: CMakeLists.txt
Far-Annoyed/src/Game/assets/shaders/: cubeShader.fg  cubeShader.vs
Far-Annoyed/src/Window/: KeyListner.cpp  KeyListner.h  glfw_window.cpp  glfw_window.h
